<resources>
    <string name="app_name">FreightCrayt</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">FIRST NAME</string>
    <string name="surname">SURNAME</string>
    <string name="log_in">LOG IN</string>
    <string name="email_username">EMAIL/USERNAME</string>
    <string name="password">PASSWORD</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_label">TITLE</string>
    <string name="description_label">Description</string>
    <string name="custom_description_label">CUSTOM DESCRIPTION</string>
    <string name="category_label">CATEGORY</string>
    <string name="sub_title_label">SUB-TITLE</string>
    <string name="discard_label">DISCARD</string>
    <string name="add_label">ADD</string>
    <string name="plus_sign_label">+</string>
    <string name="upload_image_label">UPLOAD IMAGE</string>
    <string name="upload_new_image_label">UPLOAD NEW IMAGE</string>
    <string name="update_label">UPDATE</string>
    <string name="new_item_label">NEW ITEM</string>
    <string name="image_of_collectable_desc">Image of Collectable</string>
    <string name="crayts_label">CRAYTS</string>
    <string name="add_new_label">ADD NEW</string>
    <string name="add_category_label">ADD CATEGORY</string>
    <string name="new_crayt_label">NEW CRAYT</string>
    <string name="category_name_label">CATEGORY NAME</string>
    <string name="total_crayts_label">Total Crayts</string>
    <string name="total_items_label">Total Items</string>
    <string name="delete_button">Delete</string>
    <string name="sign_out_button">Sign out</string>
    <string name="update_button">Update</string>
    <string name="analytics_btn">analytics</string>
</resources>
