<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registerActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="82dp"
        android:layout_height="34dp"
        android:layout_marginStart="164dp"
        android:layout_marginEnd="165dp"
        android:fontFamily="serif"
        android:lineSpacingExtra="8sp"
        android:text="@string/sign_up"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="265dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:textColor="@color/material_dynamic_neutral60"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="409dp" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/first_name"
        android:textColor="@color/material_dynamic_neutral60"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="319dp" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:textColor="@color/material_dynamic_neutral60"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="454dp" />

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/surname"
        android:textColor="@color/material_dynamic_neutral60"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="364dp" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/log_in"
        tools:layout_editor_absoluteX="158dp"
        tools:layout_editor_absoluteY="521dp" />
</androidx.constraintlayout.widget.ConstraintLayout>