<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
xmlns:tools="http://schemas.android.com/tools"
tools:context=".activities.add_category">

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="70dp"
    android:background="@drawable/bg_heading"
    android:gravity="center_vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_category_label"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textColor="@color/black"

        android:textSize="24dp">

    </TextView>

</LinearLayout>

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="30dp"
    android:background="@color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView

            android:id="@+id/Cim1"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:maxHeight="100dp"
            android:src="@drawable/ic_boxes_image"></ImageView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="20dp"
            android:layout_marginRight="180dp"
            android:text="@string/new_crayt_label"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold">

        </TextView>

    </RelativeLayout>


</LinearLayout>

<androidx.core.widget.NestedScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:padding="15dp"
    android:scrollbars="none"
    android:scrollingCache="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingBottom="15dp"
            android:text="@string/category_name_label"
            android:textStyle="bold"
            android:textColor="@color/black"
            >

        </TextView>


        <EditText
            android:id="@+id/add_category_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/custom_input"
            android:hint="Name"
            android:paddingLeft="10dp">

        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingBottom="15dp"
            android:text="CATEGORY GOAL"
            android:textStyle="bold"
            android:textColor="@color/black"
            >

        </TextView>

        <EditText
            android:id="@+id/add_category_goal"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/custom_input"
            android:hint="Category Goal"
            android:paddingLeft="10dp">

        </EditText>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="50dp"
            android:paddingBottom="15dp"
            android:text="@string/description_label"
            android:textStyle="bold"
            android:textColor="@color/black"
            >

        </TextView>

        <EditText

            android:id="@+id/add_category_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/custom_input"
            android:gravity="left"
            android:hint="Description"
            android:inputType="textMultiLine"
            android:lines="5"
            android:maxLines="5"
            android:paddingLeft="10dp">

        </EditText>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="88dp"
                android:gravity="center">

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/add_category_discard_btn"
                    android:textColor="@color/white"
                    android:background="@drawable/discard_button"
                    android:layout_marginRight="30dp"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="@string/discard_label"
                    android:textSize="12dp" />

                <Button

                    android:id="@+id/add_category_submit"
                    android:background="@drawable/rounded_button"
                    android:layout_marginLeft="30dp"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:text="Add new"
                    android:textSize="12dp" />
            </LinearLayout>
        </RelativeLayout>




    </LinearLayout>

</androidx.core.widget.NestedScrollView>



</LinearLayout>